--- a/Practice/phpDir/src/CRUDApp/style.css
+++ b/Practice/phpDir/src/CRUDApp/style.css
@@ -39,6 +39,7 @@ input[type=button] {
     border-radius: 4px;
     box-sizing: border-box;
     font-family: 'Courier New', Courier, monospace;
+    font-size: 16px;
 }
 
 input[type=submit] {
