add show/hide password for table cells

--- a/Practice/phpDir/src/CRUDApp/style.css
+++ b/Practice/phpDir/src/CRUDApp/style.css
@@ -52,6 +52,11 @@ label {
     vertical-align: middle;
 }
 
+.password_td.hidden {
+    -moz-text-security: disc !important;
+    -webkit-text-security: disc !important;
+}
+
 /* table */
 table {
     border-collapse: collapse;
